--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Nodejs e-commerce api",
   "main": "server.js",
   "type": "module",
   "scripts": {
