--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Sur",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.3"
   },
